@@ -557,7 +557,6 @@ class CGI
           @files[name]=body
         end
         ## break loop
-        break if buf.size == 0
         break if content_length == -1
       end
       raise EOFError, "bad boundary end of body part" unless boundary_end =~ /--/
